# splitcycle

./: 01-Profiles.ipynb  01-SplitCycle.ipynb  01-SplitCycleExamples.ipynb  02-AppendixCExamples.ipynb  02-SplitCycleExamples.ipynb  02-VotingMethods.ipynb  03-AppendixCExamples.ipynb  03-ProfilesWithTies.ipynb  04-AppendixDIrresolutenessData.ipynb  04-SplitCycleExamples.ipynb  05-AnalyzingElectionData.ipynb  05-Tables.ipynb  ComparingSplitCycleToBeatPath.ipynb  IrresolutenessPreflibData.ipynb  README.md  SplitCycleExamples.ipynb  SplitCyclevsRankedPairs.ipynb  diff_sc_data.csv  generate_profiles.py  generated_preflib_election_data.csv  irresoluteness_inf_voters.csv  mult_winners_data.csv  mult_winners_data_size_ws.csv  num_diffs.pkl  pyproject.toml  requirements.txt  violations_ssw.csv  violations_ssw_w_tb.csv
.ipynb_checkpoints/: 02-AppendixCExamples-checkpoint.ipynb  04-Tables-checkpoint.ipynb  SplitCycleExamples-checkpoint.ipynb
appendix_D_data/: diff_sc_data.csv  diff_sc_data_aws.csv  mult_winners_data_AWS.csv
preflib-data/: preflib_data_soc.csv  preflib_data_soi.csv  preflib_data_toc.csv  preflib_data_toi.csv
rusty/: Cargo.toml  README.md
rusty/src/: core.rs  main.rs  utils.rs
splitcycle/: __init__.py  core.py  errors.py  models.py  utils.py
tables-data/: irresoluteness_inf_voters.csv  violations_ssw.csv  violations_ssw_w_tb.csv
tables-data-FINAL/: irresoluteness_inf_voters_ADDITIONAL_TEST2.csv  violations_ssw.csv
test/: dfs-v-bfs.py  dfs_v_bfs.py
voting/: profile_optimized.py  profiles_with_ties.py  voting_methods.py  voting_methods_for_optimized.py  (+1 more)
(+2 files in other folders)
