[tool.poetry]
name = "splitcycle"
version = "1.0.0"
description = "A new Condorcet consistent voting method independent of clones and immune to spoilers"
authors = ["Wesley Holliday <wesholliday@berkeley.edu>", "Eric Pacuit <epacuit@umd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pref-voting = "^0.5.31"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
numba = "^0.58.1"
networkx = "^3.2.1"
tabulate = "^0.9.0"
tqdm = "^4.66.1"
python-sat = "0.1.8.dev13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
