[package]
name = "split_cycle"
description = "A new Condorcet consistent voting method independent of clones and immune to spoilers"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[dependencies]
